# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.646 2006/04/30 16:25:17 codeman Exp $

  30 Apr 2006; Preston Cody <codeman@gentoo.org>
  added a check of the length of the directory in /usr/src if under 6 characters
  should fix bug 131809

  19 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  automatically emerge splashutils and splash-themes-livecd if kernel_bootsplash
  and livecd-kernel

  16 Apr 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  change temp_use="-* " to temp_use="" because apparantly it's a bad idea to -*

  15 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIInstallProfile.py:
  change kernel-modules to not be so stupid

  9 Apr 2006; Preston Cody <codeman@gentoo.org>
  GLIMD: fix display problem with execute.pyhtml.
  make tables better.

  8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIInstallProfile.py:
  fix handling of int/float for minor
  src/templates/x86ArchitectureTemplate.py:
  save/restore partition name
  src/GLIStorageDevice.py:
  support for partition name

  8 Apr 2006; Preston Cody <codeman@gentoo.org>
  touchups to add_profile in GLIMD to link to webgli
  add a save to GLIMD profile button in webgli's saveprofile
  gliserv.py:
  initial attempt at custom networking info per client.  hostname support only.

  5 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/html/webgli/partitioning[234].pyhtml:
  small fixes for new partioning code

  2 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  record PID of secondary thread

  1 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIGenDialog.py:
  small fix for new partitioning code

  30 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  add get_devnode()
  fix up detect_devices() to detect cciss/ida arrays