@@ -1,6 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.646 2006/04/30 16:25:17 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.647 2006/05/09 21:17:46 agaffney Exp $
+
+  9 May 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  call reorder_minors() from tidy_partitions() instead of
+  set_partitions_from_disk()
+  add code to reorder_minors() to take extended/logical into consideration with
+  non-free partitions
 
   30 Apr 2006; Preston Cody <codeman@gentoo.org>
   added a check of the length of the directory in /usr/src if under 6 characters
